--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.12",
     "nodemon": "^3.1.10"
   },
   "name": "server",
